class ApiConstants {
  const ApiConstants._();

  static const String auth = '/Auth';
  static const String usuarios = '/Usuarios';
  static const String roles = '/Roles';
  static const String usuariosRoles = '/usuarios-roles';
  static const String perfiles = '/Perfiles';
  static const String categorias = '/Categorias';
  static const String retos = '/Retos';
  static const String usuariosRetos = '/usuarios-retos';
  static const String trivias = '/Trivias';
  static const String preguntas = '/Preguntas';
  static const String opcionesRespuesta = '/opciones-respuesta';
  static const String intentosTrivia = '/intentos-trivia';
  static const String respuestasUsuario = '/respuestas-usuario';
  static const String materiales = '/Materiales';
  static const String inventario = '/Inventario';
  static const String compras = '/Compras';
  static const String detallesCompra = '/detalles-compra';
  static const String publicaciones = '/Publicaciones';
  static const String comentarios = '/Comentarios';
  static const String reacciones = '/Reacciones';
  static const String seguimientos = '/Seguimientos';
  static const String guardados = '/Guardados';
  static const String calificaciones = '/Calificaciones';
  static const String conversaciones = '/Conversaciones';
  static const String denuncias = '/Denuncias';
  static const String busqueda = '/Busqueda';
  static const String enlaces = '/Enlaces';
  static const String insignias = '/Insignias';
  static const String usuariosInsignias = '/usuarios-insignias';

  static const String monedero = '/monedero';
  static const String progresos = '/Progresos';
  static const String jardines = '/Jardines';
  static const String rachas = '/Rachas';
  static const String notificaciones = '/Notificaciones';
  static const String dispositivos = '/Dispositivos';
  static const String recursos = '/Recursos';
  static const String imagenes = '/Imagenes';
}
