...
                crossAxisAlignment: CrossAxisAlignment.center,
                children: [
                  const SizedBox(height: 60),
                  _buildLogo(isDark),
                  const SizedBox(height: 40),
                  Text(
                    'Iniciar sesión',
                    style: TextStyle(
                      fontSize: 26,
                      fontWeight: FontWeight.w800,
                      color: isDark
                          ? AppColorsDark.textPrimary
                          : AppColors.textPrimary,
...
