...
          ),
          unselectedLabelStyle: const TextStyle(
            fontSize: 11,
            fontWeight: FontWeight.w500,
          ),
          items: [
            _navItem(0, Icons.home_outlined, Icons.home, 'Inicio'),
            _navItem(
                1, Icons.emoji_events_outlined, Icons.emoji_events, 'Retos'),
            _navItem(2, Icons.quiz_outlined, Icons.quiz, 'Trivia'),
            _navItem(3, Icons.forum_outlined, Icons.forum, 'Muro'),
            _navItem(4, Icons.person_outlined, Icons.person, 'Perfil'),
          ],
        ),
      ),
    );
  }
...
