...
                            icon: Icons.park_outlined,
                            label: 'Jardín Virtual',
                            onTap: () => onOptionSelected('garden'),
                          ),
                          _buildMenuItem(
                            icon: Icons.quiz_outlined,
                            label: 'Trivia Eco',
                            onTap: () => onOptionSelected('trivia'),
                          ),
                          _buildMenuItem(
                            icon: Icons.forum_outlined,
                            label: 'Para ti',
                            onTap: () => onOptionSelected('community'),
...
